<resources>
    <!--<string name="app_name">EDUS</string>-->
    <string name="action_settings">系统预警</string>
    <string name="loadind">加载中...</string>
    <string name="title_activity_function_menu">FunctionMenuActivity</string>
    <string name="title_activity_pre_login">PreLoginActivity</string>
    <string name="title_activity_settings">设置</string>

    <!--日期时间字符串-->

    <string-array name="weeks">
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
        <item>星期日</item>
    </string-array>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="cancel">取 消</string>
    <string name="ensure">确 定</string>

    <string name="select_date">选择日期</string>
    <string name="select_time">选择时间</string>
    <string name="select_week">选择星期</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">通用</string>

    <string name="pref_title_social_recommendations">退出登录</string>
    <string name="pref_description_social_recommendations">返回登录界面后需要重新输入用户名密码才能登陆
    </string>

    <string name="pref_title_display_name">客户化系统手机端版本号：</string>
    <string name="pref_default_display_name">1.2.8</string>

    <string name="feedback_content">填写反馈内容</string>
    <string name="feedback">意见反馈</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">数据 &amp; 同步</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">提醒</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_search">SearchActivity</string>

    <string name="close">关灯</string>
    <string name="open">开灯</string>
    <string name="not_scan">无法识别</string>
    <string name="title_activity_nav">客户化手机版</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_list_edit">ListEditActivity</string>
    <string name="permission">权限(permission)</string>
    <string name="no_permissions">应用需要必要的运行权限</string>
    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
    <string name="planet_prompt">Choose a planet</string>

    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="loading">加载中...</string>
    <string name="title_activity_stu_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_delete">删除</string>

    <string  name="normal">按住 说话</string>
    <string  name="recording">松开 结束</string>
    <string  name="want_to_cancle">松开手指，取消发送</string>
    <string name="shouzhishanghua">手指上滑，取消发送</string>
    <string name="tooshort">录音时间过短</string>
</resources>
